# myi

./: README.md  pyproject.toml
.github/workflows/: publish.yml
myi/: __init__.py  cli.py  core.py  display.py
