[build-system]
requires = ["setuptools>=45", "wheel", "twine"]
build-backend = "setuptools.build_meta"

[project]
name = "myinfopro"
version = "1.0.2"
description = "Real-time per-second income tracker with beautiful terminal UI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Mr. Noor", email = "mrnoor.in@gmail.com"}
]
keywords = ["income", "salary", "money", "tracker", "cli", "terminal", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.scripts]
myi = "myi.cli:cli"

[project.urls]
Homepage = "https://github.com/mrnoor-in/myi"
Issues = "https://github.com/mrnoor-in/myi/issues"
